--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,8 +1,77 @@
-fastapi
-uvicorn
-trafilatura
-openai
-python-dotenv
-pydantic
-ddgs
-profanity-check
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+annotated-types==0.7.0
+anyio==4.9.0
+async-timeout==5.0.1
+attrs==25.3.0
+babel==2.17.0
+bcrypt==4.3.0
+better-profanity==0.7.0
+cachetools==5.5.2
+certifi==2025.7.14
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+courlan==1.3.2
+cryptography==45.0.5
+dateparser==1.2.2
+ddgs==9.5.0
+distro==1.9.0
+dnspython==2.7.0
+email_validator==2.2.0
+exceptiongroup==1.3.0
+fastapi==0.116.1
+fastapi-security==0.1.0
+frozenlist==1.7.0
+google-auth==2.40.3
+google-genai==1.28.0
+h11==0.16.0
+htmldate==1.9.3
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+jiter==0.10.0
+joblib==1.5.1
+jusText==3.0.2
+lxml==5.4.0
+lxml_html_clean==0.4.2
+motor==3.7.1
+multidict==6.6.3
+numpy==2.2.6
+openai==1.98.0
+passlib==1.7.4
+primp==0.15.0
+propcache==0.3.2
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pydantic==2.11.7
+pydantic_core==2.33.2
+PyJWT==2.10.1
+pymongo==4.13.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytz==2025.2
+regex==2025.7.34
+requests==2.32.4
+rsa==4.9.1
+scikit-learn==1.7.1
+scipy==1.15.3
+six==1.17.0
+sniffio==1.3.1
+starlette==0.47.2
+tenacity==8.5.0
+threadpoolctl==3.6.0
+tld==0.13.1
+tqdm==4.67.1
+trafilatura==2.0.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.5.0
+uvicorn==0.35.0
+websockets==15.0.1
+yarl==1.20.1
